[project]
name = "aes256"
version = "0.1.0"
description = "AES-256 Implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
    "tinygrad>=0.10.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["aes256"]
